--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -15,3 +15,6 @@ labs_front:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
