--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -173,3 +173,8 @@ liip_imagine:
             quality: 90
             filters:
                 thumbnail: { size: [360, 240], mode: outbound }
+
+        my_thumb_banner:
+            quality: 90
+            filters:
+                thumbnail: { size: [1267, 383], mode: outbound }
