--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -13,3 +13,7 @@ services:
         class: Twig_Extensions_Extension_Intl
         tags:
             - { name: twig.extension }
+
+    draft_create:
+        class: Labs\BackBundle\Services\Draft
+        arguments: ["@doctrine.orm.entity_manager"]
